cmake_minimum_required(VERSION 3.10)
project(CircleMUD)

set(CMAKE_CXX_STANDARD 11)

include_directories(cnf)
include_directories(src)

add_executable(CircleMUD
        bin/autowiz
        bin/circle
        bin/delobjs
        bin/listrent
        bin/mudpasswd
        bin/play2to3
        bin/purgeplay
        bin/README
        bin/shopconv
        bin/showplay
        bin/sign
        bin/split
        bin/wld2html
        cnf/acconfig.h
        cnf/aclocal.m4
        cnf/configure.in
        cnf/README
        doc/OLD-DOCS/coding.doc
        doc/OLD-DOCS/color.doc
        doc/OLD-DOCS/comm.doc
        doc/OLD-DOCS/database.doc
        doc/OLD-DOCS/dbsup.doc
        doc/OLD-DOCS/defs.doc
        doc/OLD-DOCS/do_mail
        doc/OLD-DOCS/files.doc
        doc/OLD-DOCS/hacker.doc
        doc/OLD-DOCS/handler.doc
        doc/OLD-DOCS/header
        doc/OLD-DOCS/license.doc
        doc/OLD-DOCS/README
        doc/OLD-DOCS/README-DOCS
        doc/OLD-DOCS/release.doc
        doc/OLD-DOCS/running.doc
        doc/OLD-DOCS/shop.doc
        doc/OLD-DOCS/socials.doc
        doc/OLD-DOCS/spell_info.doc
        doc/OLD-DOCS/spells.doc
        doc/OLD-DOCS/time.doc
        doc/OLD-DOCS/utils.doc
        doc/OLD-DOCS/values.doc
        doc/sources/act.tex
        doc/sources/admin.tex
        doc/sources/building.tex
        doc/sources/coding.tex
        doc/sources/color.tex
        doc/sources/FAQ.tex
        doc/sources/files.tex
        doc/sources/hacker.tex
        doc/sources/license.tex
        doc/sources/porting.tex
        doc/sources/README
        doc/sources/release.tex
        doc/sources/socials.tex
        doc/sources/utils.tex
        doc/sources/wizhelp.tex
        doc/act.pdf
        doc/admin.pdf
        doc/building.pdf
        doc/coding.pdf
        doc/color.pdf
        doc/FAQ.pdf
        doc/files.pdf
        doc/hacker.pdf
        doc/license.pdf
        doc/license.txt
        doc/porting.pdf
        doc/README.AMIGA
        doc/README.ARC
        doc/README.BORLAND
        doc/README.CYGWIN
        doc/README.MSVC4
        doc/README.MSVC5
        doc/README.MSVC6
        doc/README.OS2
        doc/README.UNIX
        doc/README.VMS
        doc/README.WATCOM
        doc/README.WIN
        doc/release.pdf
        doc/socials.pdf
        doc/syserr.txt
        doc/utils.pdf
        doc/wizhelp.pdf
        doc/wizhelp.txt
        lib/etc/hcontrol
        lib/etc/players
        lib/etc/plrmail
        lib/etc/README
        lib/etc/time
        lib/house/README
        lib/misc/bugs
        lib/misc/ideas
        lib/misc/messages
        lib/misc/socials
        lib/misc/socials.new
        lib/misc/typos
        lib/misc/xnames
        lib/plralias/A-E/00
        lib/plralias/F-J/00
        lib/plralias/K-O/00
        lib/plralias/P-T/00
        lib/plralias/U-Z/00
        lib/plralias/ZZZ/00
        lib/plrobjs/A-E/00
        lib/plrobjs/F-J/00
        lib/plrobjs/F-J/fate.objs
        lib/plrobjs/K-O/00
        lib/plrobjs/P-T/00
        lib/plrobjs/U-Z/00
        lib/plrobjs/ZZZ/00
        lib/plrobjs/purgedir
        lib/plrobjs/purgeobjs
        lib/plrobjs/searchfor
        lib/text/help/commands.hlp
        lib/text/help/index
        lib/text/help/index.mini
        lib/text/help/info.hlp
        lib/text/help/screen
        lib/text/help/socials.hlp
        lib/text/help/spells.hlp
        lib/text/help/wizhelp.hlp
        lib/text/background
        lib/text/credits
        lib/text/greetings
        lib/text/handbook
        lib/text/immlist
        lib/text/imotd
        lib/text/info
        lib/text/motd
        lib/text/news
        lib/text/policies
        lib/text/wizlist
        lib/world/mob/0.mob
        lib/world/mob/12.mob
        lib/world/mob/120.mob
        lib/world/mob/15.mob
        lib/world/mob/150.mob
        lib/world/mob/186.mob
        lib/world/mob/25.mob
        lib/world/mob/30.mob
        lib/world/mob/31.mob
        lib/world/mob/33.mob
        lib/world/mob/35.mob
        lib/world/mob/36.mob
        lib/world/mob/40.mob
        lib/world/mob/50.mob
        lib/world/mob/51.mob
        lib/world/mob/52.mob
        lib/world/mob/53.mob
        lib/world/mob/54.mob
        lib/world/mob/60.mob
        lib/world/mob/61.mob
        lib/world/mob/62.mob
        lib/world/mob/63.mob
        lib/world/mob/64.mob
        lib/world/mob/65.mob
        lib/world/mob/70.mob
        lib/world/mob/72.mob
        lib/world/mob/79.mob
        lib/world/mob/9.mob
        lib/world/mob/index
        lib/world/mob/index.mini
        lib/world/obj/0.obj
        lib/world/obj/120.obj
        lib/world/obj/15.obj
        lib/world/obj/150.obj
        lib/world/obj/186.obj
        lib/world/obj/25.obj
        lib/world/obj/30.obj
        lib/world/obj/31.obj
        lib/world/obj/33.obj
        lib/world/obj/35.obj
        lib/world/obj/36.obj
        lib/world/obj/40.obj
        lib/world/obj/50.obj
        lib/world/obj/51.obj
        lib/world/obj/52.obj
        lib/world/obj/53.obj
        lib/world/obj/54.obj
        lib/world/obj/60.obj
        lib/world/obj/61.obj
        lib/world/obj/62.obj
        lib/world/obj/63.obj
        lib/world/obj/64.obj
        lib/world/obj/65.obj
        lib/world/obj/71.obj
        lib/world/obj/72.obj
        lib/world/obj/79.obj
        lib/world/obj/9.obj
        lib/world/obj/index
        lib/world/obj/index.mini
        lib/world/shp/120.shp
        lib/world/shp/150.shp
        lib/world/shp/25.shp
        lib/world/shp/30.shp
        lib/world/shp/31.shp
        lib/world/shp/33.shp
        lib/world/shp/54.shp
        lib/world/shp/65.shp
        lib/world/shp/index
        lib/world/shp/index.mini
        lib/world/shp/shop-convert.pl
        lib/world/wld/0.wld
        lib/world/wld/12.wld
        lib/world/wld/120.wld
        lib/world/wld/15.wld
        lib/world/wld/150.wld
        lib/world/wld/186.wld
        lib/world/wld/25.wld
        lib/world/wld/30.wld
        lib/world/wld/31.wld
        lib/world/wld/33.wld
        lib/world/wld/35.wld
        lib/world/wld/36.wld
        lib/world/wld/40.wld
        lib/world/wld/50.wld
        lib/world/wld/51.wld
        lib/world/wld/52.wld
        lib/world/wld/53.wld
        lib/world/wld/54.wld
        lib/world/wld/60.wld
        lib/world/wld/61.wld
        lib/world/wld/62.wld
        lib/world/wld/63.wld
        lib/world/wld/64.wld
        lib/world/wld/65.wld
        lib/world/wld/70.wld
        lib/world/wld/71.wld
        lib/world/wld/72.wld
        lib/world/wld/79.wld
        lib/world/wld/9.wld
        lib/world/wld/index
        lib/world/wld/index.mini
        lib/world/zon/0.zon
        lib/world/zon/12.zon
        lib/world/zon/120.zon
        lib/world/zon/15.zon
        lib/world/zon/150.zon
        lib/world/zon/186.zon
        lib/world/zon/25.zon
        lib/world/zon/30.zon
        lib/world/zon/31.zon
        lib/world/zon/33.zon
        lib/world/zon/35.zon
        lib/world/zon/36.zon
        lib/world/zon/40.zon
        lib/world/zon/50.zon
        lib/world/zon/51.zon
        lib/world/zon/52.zon
        lib/world/zon/53.zon
        lib/world/zon/54.zon
        lib/world/zon/60.zon
        lib/world/zon/61.zon
        lib/world/zon/62.zon
        lib/world/zon/63.zon
        lib/world/zon/64.zon
        lib/world/zon/65.zon
        lib/world/zon/70.zon
        lib/world/zon/71.zon
        lib/world/zon/72.zon
        lib/world/zon/73.zon
        lib/world/zon/79.zon
        lib/world/zon/9.zon
        lib/world/zon/index
        lib/world/zon/index.mini
        lib/world/README
        lib/world/README.CAW
        lib/world/zone.lst
        lib/README
        log/README
        src/util/autowiz.c
        src/util/delobjs.c
        src/util/listrent.c
        src/util/Makefile
        src/util/Makefile.in
        src/util/mudpasswd.c
        src/util/play2to3.c
        src/util/purgeplay.c
        src/util/scheck
        src/util/shopconv.c
        src/util/showplay.c
        src/util/sign.c
        src/util/split.c
        src/util/wld2html.c
        src/act.comm.c
        src/act.comm.o
        src/act.informative.c
        src/act.informative.o
        src/act.item.c
        src/act.item.o
        src/act.movement.c
        src/act.movement.o
        src/act.offensive.c
        src/act.offensive.o
        src/act.other.c
        src/act.other.o
        src/act.social.c
        src/act.social.o
        src/act.wizard.c
        src/act.wizard.o
        src/aedit.c
        src/aedit.o
        src/alias.c
        src/alias.o
        src/ban.c
        src/ban.o
        src/boards.c
        src/boards.h
        src/boards.o
        src/bsd-snprintf.c
        src/bsd-snprintf.h
        src/bsd-snprintf.o
        src/build_circlemud.com
        src/castle.c
        src/castle.o
        src/cedit.c
        src/cedit.o
        src/class.c
        src/class.o
        src/comm.c
        src/comm.h
        src/comm.o
        src/conf.h
        src/conf.h.amiga
        src/conf.h.arc
        src/conf.h.in
        src/conf.h.mac
        src/conf.h.os2
        src/conf.h.vms
        src/conf.h.win
        src/config.c
        src/config.o
        src/constants.c
        src/constants.h
        src/constants.o
        src/db.c
        src/db.h
        src/db.hpp
        src/db.o
        src/depend
        src/fight.c
        src/fight.o
        src/genmob.c
        src/genmob.h
        src/genmob.o
        src/genobj.c
        src/genobj.h
        src/genobj.o
        src/genolc.c
        src/genolc.h
        src/genolc.o
        src/genshp.c
        src/genshp.h
        src/genshp.o
        src/genwld.c
        src/genwld.h
        src/genwld.o
        src/genzon.c
        src/genzon.h
        src/genzon.o
        src/graph.c
        src/graph.o
        src/handler.c
        src/handler.h
        src/handler.o
        src/house.c
        src/house.h
        src/house.o
        src/htmlh-head
        src/htmlh-tail
        src/improved-edit.c
        src/improved-edit.h
        src/improved-edit.o
        src/interpreter.c
        src/interpreter.h
        src/interpreter.o
        src/licheck
        src/limits.c
        src/limits.o
        src/magic.c
        src/magic.o
        src/mail.c
        src/mail.h
        src/mail.o
        src/Makefile
        src/Makefile.amiga
        src/Makefile.arc
        src/Makefile.bcc
        src/Makefile.bcc55
        src/Makefile.in
        src/Makefile.lcc
        src/Makefile.msvc
        src/Makefile.os2
        src/medit.c
        src/medit.o
        src/mobact.c
        src/mobact.o
        src/modify.c
        src/modify.o
        src/oasis.c
        src/oasis.h
        src/oasis.o
        src/oasis_copy.c
        src/oasis_copy.o
        src/oasis_delete.c
        src/oasis_delete.h
        src/oasis_delete.o
        src/oasis_list.c
        src/oasis_list.o
        src/objsave.c
        src/objsave.o
        src/oedit.c
        src/oedit.o
        src/olc.c
        src/olc.h
        src/olc.o
        src/random.c
        src/random.o
        src/redit.c
        src/redit.o
        src/SCOPTIONS
        src/screen.h
        src/sedit.c
        src/sedit.o
        src/shop.c
        src/shop.h
        src/shop.o
        src/Smakefile
        src/spec_assign.c
        src/spec_assign.o
        src/spec_procs.c
        src/spec_procs.o
        src/spell_parser.c
        src/spell_parser.o
        src/spells.c
        src/spells.h
        src/spells.o
        src/structs.h
        src/sysdep.h
        src/tedit.c
        src/tedit.h
        src/tedit.o
        src/telnet.h
        src/TODO
        src/utils.c
        src/utils.h
        src/utils.o
        src/weather.c
        src/weather.o
        src/zedit.c
        src/zedit.o
        automaint
        autorun
        autorun.amiga
        autorun.cmd
        autorun.pl
        autorun.README
        autorun.sh
        ChangeLog
        config.cache
        config.log
        config.status
        configure
        FAQ
        macrun.pl
        README
        release_notes.3.1.txt
        syslog
        vms_autorun.com src/GameManager.cpp src/GameManager.h src/ZoneManager.cpp src/ZoneManager.h src/oo/main.cpp src/ObjectManager.cpp src/ObjectManager.h)
